brat/test/golden/error/fanout-list.brat
f(List(Bool)) -> Bool, Bool
f = { [/\] }
