brat/test/golden/error/fanout-list.brat.golden
Error in test/golden/error/fanout-list.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [/\] }
    ^^^^^^^^

  Type error: Fanout ([/\]) only applies to Vec

